src/app/features/iframe/containers/iframe/iframe.component.scss
@import '../../../../../variables';

.iframe_container {
  padding-top: 1.5rem;
  height: 100vh;
}

.contract-card {
  margin-bottom: 2rem;
}

.iframe_container {
  background: rgb(255,255,255);
  background: radial-gradient(circle, white 0%,#eae8e8 84%);
}

.mat-stepper-vertical {
  background: transparent;
}

.stepper_container {
  max-width: 80rem;
  margin: 0 auto;
}

.step1 {
  padding-top: 2rem;

  &__cards-box {
    overflow: scroll;

    .scroll_left_button {
      position: absolute;
      right: 0;
      z-index: 1;
    }

    .scroll_right_button {
      position: absolute;
      left: 0;
      z-index: 1;
    }
  }

  mat-card {
    margin-right: 1.5rem;
  }

}

.step1_header {
  border-radius: 0.4rem;
  overflow: hidden;
  /* background-color: $background-grey;
  padding-right: 1rem; */

  &_image {
    height: 7.2rem;
  }

  &_name {
  }

  /* &_tags {
    color: $primary;

    mat-icon {
      color: $primary;
    }
  } */
}

:host ::ng-deep .mat-step-label {
  h5 {
    margin: 0;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
  }
}

.personal_details {
  margin-top: 2.4rem;
}

.credit_card_container {
  margin-top: 1rem;
  margin-bottom: 2rem;
}

.selected_contract {
  box-shadow: 5px 5px 0px 1px $primary, 0 0px 0px 0px $primary, 0 0px 0px 0 $primary;
}

.purchase_contract_button {
  padding-top: 2rem;
}

.sale_finished_message {
  color: $accent;
}

.terms_conditions_checks {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  color: $dark-grey;

  .mat-button {
    padding: 0.5rem;
    line-height: 1rem;
  }

  .mat-checkbox {
    margin-right: 1rem;
  }

  .contract_terms_container {
    margin-bottom: 1rem;
  }

  .terms_to_show_container {
    position: relative;
  }

  .terms_to_show {
    margin-top: 1rem;
    border: 0.1rem solid $lighter-grey;
    border-radius: 0.5rem;
    max-height: 10rem;
    overflow: scroll;
    padding-right: 0.5rem;
    padding-left: 0.5rem;

    .terms_text_container {
      padding: 0.5rem;
      max-height: 80%;
      overflow: scroll;
    }

    .mat-mini-fab {
      position: absolute;
      top: -1rem;
      right: -1rem;
    }
  }
}


// Material overwrites
mat-card-subtitle mat-icon, .step1_header_tags mat-icon {
  height: 1.8rem;
  width: 1.8rem;
  margin-right: 0.4rem;
}

mat-card-subtitle .material-icons, .step1_header_tags .material-icons {
  font-size: 18px;
}

:host ::ng-deep .mat-step-label {
  width: 100% !important;
}

.personal_details mat-icon {
  font-size: 1.8rem !important;
  margin-right: 0.4rem;
  margin-left: 0.4rem;
  vertical-align: sub;
  color: $lighter-grey;
}

:host ::ng-deep {
  .mat-step-label-active {
    color: $primary !important;
  }
}

